deploy/k8s/vault/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: irminsul
  labels:
    app.kubernetes.io/name: vault
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: vault
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
